feat: API key auth
