# controllers/book.go
@@ -29,6 +29,7 @@ func Healthcheck(g *gin.Context) {
 // @Summary Get all books with pagination
 // @Description Get a list of all books with optional pagination
 // @Tags books
+// @Security ApiKeyAuth
 // @Produce json
 // @Param offset query int false "Offset for pagination" default(0)
 // @Param limit query int false "Limit for pagination" default(10)
@@ -71,6 +72,7 @@ func FindBooks(c *gin.Context) {
 // @Description Create a new book with the given input data
 // @Tags books
 // @Security ApiKeyAuth
+// @Security JwtAuth
 // @Accept  json
 // @Produce  json
 // @Param   input     body   models.CreateBook   true   "Create book object"
@@ -97,6 +99,7 @@ func CreateBook(c *gin.Context) {
 // @Summary Find a book by ID
 // @Description Get details of a book by its ID
 // @Tags books
+// @Security ApiKeyAuth
 // @Produce json
 // @Param id path string true "Book ID"
 // @Success 200 {object} models.Book "Successfully retrieved book"
@@ -117,6 +120,7 @@ func FindBook(c *gin.Context) {
 // @Summary Update a book by ID
 // @Description Update the book details for the given ID
 // @Tags books
+// @Security ApiKeyAuth
 // @Accept  json
 // @Produce  json
 // @Param id path string true "Book ID"
@@ -148,6 +152,7 @@ func UpdateBook(c *gin.Context) {
 // @Summary Delete a book by ID
 // @Description Delete the book with the given ID
 // @Tags books
+// @Security ApiKeyAuth
 // @Produce json
 // @Param id path string true "Book ID"
 // @Success 204 {string} string "Successfully deleted book"
